--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,1 +1,3 @@
-<h1>Welcome to schedule tweets"</h1>
+<div class="d-flex align-items-center justify-content-center">
+<h1>Welcome to schedule tweets</h1>
+</div>
