--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <%= render partial: "shared/navbar" %>
 
     <div class="container">
+      <%= render partial: "shared/flash" %>
       <%= yield %>
     </div>
   </body>
