--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,10 @@
 <div class="d-flex align-items-center justify-content-center">
     <h1>Welcome to schedule tweets</h1>
-    <% if @user %>
-        Logged in as: <%= @user.email %>
-    <% end %>
 </div>
+
+<% if @user %>
+    Logged in as: <%= @user.email %>
+
+    <%= link_to "Logout", logout_path, method: :delete %>
+    <%= button_to "Logout", logout_path, method: :delete %>
+<% end %>
